--- a/index.html
+++ b/index.html
@@ -51,6 +51,216 @@
   </div>
 </figure>
 <!-- partial -->
+<!-- partial:index.partial.html -->
+<figure class="card-flip fancy-hover">
+  <div class="card-flip__flipper">
+    <!-- FRONT SIDE -->
+    <figure class="card-flip__content card-flip__content--front">
+      <img class="fancy-hover__image" src="./img/03.jpg">
+      <div class="fancy-hover__fancy"></div>
+      <div class="fancy-hover__element fancy-hover__element--title">
+        <p class="fancy-hover__text">Festival Madres de Plaza de Mayo</p>
+      </div>
+      <div class="fancy-hover__element fancy-hover__element--subtitle">
+        <p class="fancy-hover__text">Domingo 12/10/1997<br>Estadio Ferro</p>
+      </div>
+    </figure>
+    <!-- BACK SIDE -->
+    <figure class="card-flip__content card-flip__content--back">
+      <p>La Renga<br>Rata Blanca<br>Malón<br>Las Pelotas<br>Caballeros de la Quema<br>León Gieco</p>
+    </figure>
+  </div>
+</figure>
+<!-- partial -->
+<!-- partial:index.partial.html -->
+<figure class="card-flip fancy-hover">
+  <div class="card-flip__flipper">
+    <!-- FRONT SIDE -->
+    <figure class="card-flip__content card-flip__content--front">
+      <img class="fancy-hover__image" src="./img/04.jpg">
+      <div class="fancy-hover__fancy"></div>
+      <div class="fancy-hover__element fancy-hover__element--title">
+        <p class="fancy-hover__text">Festival Madres de Plaza de Mayo</p>
+      </div>
+      <div class="fancy-hover__element fancy-hover__element--subtitle">
+        <p class="fancy-hover__text">Domingo 12/10/1997<br>Estadio Ferro</p>
+      </div>
+    </figure>
+    <!-- BACK SIDE -->
+    <figure class="card-flip__content card-flip__content--back">
+      <p>La Renga<br>Rata Blanca<br>Malón<br>Las Pelotas<br>Caballeros de la Quema<br>León Gieco</p>
+    </figure>
+  </div>
+</figure>
+<!-- partial -->
+<!-- partial:index.partial.html -->
+<figure class="card-flip fancy-hover">
+  <div class="card-flip__flipper">
+    <!-- FRONT SIDE -->
+    <figure class="card-flip__content card-flip__content--front">
+      <img class="fancy-hover__image" src="./img/05.jpg">
+      <div class="fancy-hover__fancy"></div>
+      <div class="fancy-hover__element fancy-hover__element--title">
+        <p class="fancy-hover__text">Festival Madres de Plaza de Mayo</p>
+      </div>
+      <div class="fancy-hover__element fancy-hover__element--subtitle">
+        <p class="fancy-hover__text">Domingo 12/10/1997<br>Estadio Ferro</p>
+      </div>
+    </figure>
+    <!-- BACK SIDE -->
+    <figure class="card-flip__content card-flip__content--back">
+      <p>La Renga<br>Rata Blanca<br>Malón<br>Las Pelotas<br>Caballeros de la Quema<br>León Gieco</p>
+    </figure>
+  </div>
+</figure>
+<!-- partial -->
+<!-- partial:index.partial.html -->
+<figure class="card-flip fancy-hover">
+  <div class="card-flip__flipper">
+    <!-- FRONT SIDE -->
+    <figure class="card-flip__content card-flip__content--front">
+      <img class="fancy-hover__image" src="./img/06.jpg">
+      <div class="fancy-hover__fancy"></div>
+      <div class="fancy-hover__element fancy-hover__element--title">
+        <p class="fancy-hover__text">Festival Madres de Plaza de Mayo</p>
+      </div>
+      <div class="fancy-hover__element fancy-hover__element--subtitle">
+        <p class="fancy-hover__text">Domingo 12/10/1997<br>Estadio Ferro</p>
+      </div>
+    </figure>
+    <!-- BACK SIDE -->
+    <figure class="card-flip__content card-flip__content--back">
+      <p>La Renga<br>Rata Blanca<br>Malón<br>Las Pelotas<br>Caballeros de la Quema<br>León Gieco</p>
+    </figure>
+  </div>
+</figure>
+<!-- partial -->
+<!-- partial:index.partial.html -->
+<figure class="card-flip fancy-hover">
+  <div class="card-flip__flipper">
+    <!-- FRONT SIDE -->
+    <figure class="card-flip__content card-flip__content--front">
+      <img class="fancy-hover__image" src="./img/07.jpg">
+      <div class="fancy-hover__fancy"></div>
+      <div class="fancy-hover__element fancy-hover__element--title">
+        <p class="fancy-hover__text">Festival Madres de Plaza de Mayo</p>
+      </div>
+      <div class="fancy-hover__element fancy-hover__element--subtitle">
+        <p class="fancy-hover__text">Domingo 12/10/1997<br>Estadio Ferro</p>
+      </div>
+    </figure>
+    <!-- BACK SIDE -->
+    <figure class="card-flip__content card-flip__content--back">
+      <p>La Renga<br>Rata Blanca<br>Malón<br>Las Pelotas<br>Caballeros de la Quema<br>León Gieco</p>
+    </figure>
+  </div>
+</figure>
+<!-- partial -->
+<!-- partial:index.partial.html -->
+<figure class="card-flip fancy-hover">
+  <div class="card-flip__flipper">
+    <!-- FRONT SIDE -->
+    <figure class="card-flip__content card-flip__content--front">
+      <img class="fancy-hover__image" src="./img/08.jpg">
+      <div class="fancy-hover__fancy"></div>
+      <div class="fancy-hover__element fancy-hover__element--title">
+        <p class="fancy-hover__text">Festival Madres de Plaza de Mayo</p>
+      </div>
+      <div class="fancy-hover__element fancy-hover__element--subtitle">
+        <p class="fancy-hover__text">Domingo 12/10/1997<br>Estadio Ferro</p>
+      </div>
+    </figure>
+    <!-- BACK SIDE -->
+    <figure class="card-flip__content card-flip__content--back">
+      <p>La Renga<br>Rata Blanca<br>Malón<br>Las Pelotas<br>Caballeros de la Quema<br>León Gieco</p>
+    </figure>
+  </div>
+</figure>
+<!-- partial -->
+<!-- partial:index.partial.html -->
+<figure class="card-flip fancy-hover">
+  <div class="card-flip__flipper">
+    <!-- FRONT SIDE -->
+    <figure class="card-flip__content card-flip__content--front">
+      <img class="fancy-hover__image" src="./img/09.jpg">
+      <div class="fancy-hover__fancy"></div>
+      <div class="fancy-hover__element fancy-hover__element--title">
+        <p class="fancy-hover__text">Festival Madres de Plaza de Mayo</p>
+      </div>
+      <div class="fancy-hover__element fancy-hover__element--subtitle">
+        <p class="fancy-hover__text">Domingo 12/10/1997<br>Estadio Ferro</p>
+      </div>
+    </figure>
+    <!-- BACK SIDE -->
+    <figure class="card-flip__content card-flip__content--back">
+      <p>La Renga<br>Rata Blanca<br>Malón<br>Las Pelotas<br>Caballeros de la Quema<br>León Gieco</p>
+    </figure>
+  </div>
+</figure>
+<!-- partial -->
+<!-- partial:index.partial.html -->
+<figure class="card-flip fancy-hover">
+  <div class="card-flip__flipper">
+    <!-- FRONT SIDE -->
+    <figure class="card-flip__content card-flip__content--front">
+      <img class="fancy-hover__image" src="./img/10.jpg">
+      <div class="fancy-hover__fancy"></div>
+      <div class="fancy-hover__element fancy-hover__element--title">
+        <p class="fancy-hover__text">Festival Madres de Plaza de Mayo</p>
+      </div>
+      <div class="fancy-hover__element fancy-hover__element--subtitle">
+        <p class="fancy-hover__text">Domingo 12/10/1997<br>Estadio Ferro</p>
+      </div>
+    </figure>
+    <!-- BACK SIDE -->
+    <figure class="card-flip__content card-flip__content--back">
+      <p>La Renga<br>Rata Blanca<br>Malón<br>Las Pelotas<br>Caballeros de la Quema<br>León Gieco</p>
+    </figure>
+  </div>
+</figure>
+<!-- partial -->
+<!-- partial:index.partial.html -->
+<figure class="card-flip fancy-hover">
+  <div class="card-flip__flipper">
+    <!-- FRONT SIDE -->
+    <figure class="card-flip__content card-flip__content--front">
+      <img class="fancy-hover__image" src="./img/11.jpg">
+      <div class="fancy-hover__fancy"></div>
+      <div class="fancy-hover__element fancy-hover__element--title">
+        <p class="fancy-hover__text">Festival Madres de Plaza de Mayo</p>
+      </div>
+      <div class="fancy-hover__element fancy-hover__element--subtitle">
+        <p class="fancy-hover__text">Domingo 12/10/1997<br>Estadio Ferro</p>
+      </div>
+    </figure>
+    <!-- BACK SIDE -->
+    <figure class="card-flip__content card-flip__content--back">
+      <p>La Renga<br>Rata Blanca<br>Malón<br>Las Pelotas<br>Caballeros de la Quema<br>León Gieco</p>
+    </figure>
+  </div>
+</figure>
+<!-- partial -->
+<!-- partial:index.partial.html -->
+<figure class="card-flip fancy-hover">
+  <div class="card-flip__flipper">
+    <!-- FRONT SIDE -->
+    <figure class="card-flip__content card-flip__content--front">
+      <img class="fancy-hover__image" src="./img/12.jpg">
+      <div class="fancy-hover__fancy"></div>
+      <div class="fancy-hover__element fancy-hover__element--title">
+        <p class="fancy-hover__text">Festival Madres de Plaza de Mayo</p>
+      </div>
+      <div class="fancy-hover__element fancy-hover__element--subtitle">
+        <p class="fancy-hover__text">Domingo 12/10/1997<br>Estadio Ferro</p>
+      </div>
+    </figure>
+    <!-- BACK SIDE -->
+    <figure class="card-flip__content card-flip__content--back">
+      <p>La Renga<br>Rata Blanca<br>Malón<br>Las Pelotas<br>Caballeros de la Quema<br>León Gieco</p>
+    </figure>
+  </div>
+</figure>
+<!-- partial -->
 
 </div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script><script  src="./script.js"></script>
