--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <img class="fancy-hover__image" src="./img/03.jpg">
       <div class="fancy-hover__fancy"></div>
       <div class="fancy-hover__element fancy-hover__element--title">
-        <p class="fancy-hover__text">Festival Madres de Plaza de Mayo</p>
+        <p class="fancy-hover__text">La Renga</p>
       </div>
       <div class="fancy-hover__element fancy-hover__element--subtitle">
         <p class="fancy-hover__text">Domingo 12/10/1997<br>Estadio Ferro</p>
@@ -67,7 +67,38 @@
     </figure>
     <!-- BACK SIDE -->
     <figure class="card-flip__content card-flip__content--back">
-      <p>La Renga<br>Rata Blanca<br>Malón<br>Las Pelotas<br>Caballeros de la Quema<br>León Gieco</p>
+      <div class="sidebar">
+        <ol>
+          <li>El final es en donde parti</li>
+          <li>Desnudo para siempre (o despedazado por mil partes)</li>
+          <li>A la carga mi rocanrol</li>
+          <li>Psilocybe Mexicana</li>
+          <li>Moscas verdes para el charlatán</li>
+          <li>Cortala y olvidala</li>
+          <li>Blues cardíaco</li>
+          <li>Balada del Diablo y la Muerte</li>
+          <li>El Terco</li>
+          <li>El Mambo de la Botella</li>
+          <li>El Juicio del Ganso</li>
+          <li>Cuándo vendrán?</li>
+          <li>Lo frágil de la locura</li>
+          <li>Triste canción de amor</li>
+          <li>Veneno</li>
+          <li>El camino del deshielo</li>
+          <li>El viento que todo empuja</li>
+          <li>Reíte</li>
+          <li>Paja brava</li>
+          <li>Somos los mismos de siempre</li>
+          <li>Voy a bailar a la nave del olvido</li>
+          <li>Negra es mi alma, negro mi corazón</li>
+          <li>El rito de los corazones sangrando</li>
+          <li>Blues de Bolivia</li>
+          <li>Luciendo mi saquito blusero</li>
+          <li>Pis y caca</li>
+          <li>Buseca y vino tinto</li>
+          <li>Hablando de la libertad</li>
+        </ol>
+      </div>
     </figure>
   </div>
 </figure>
@@ -80,15 +111,15 @@
       <img class="fancy-hover__image" src="./img/04.jpg">
       <div class="fancy-hover__fancy"></div>
       <div class="fancy-hover__element fancy-hover__element--title">
-        <p class="fancy-hover__text">Festival Madres de Plaza de Mayo</p>
+        <p class="fancy-hover__text">Viejas Locas</p>
       </div>
       <div class="fancy-hover__element fancy-hover__element--subtitle">
-        <p class="fancy-hover__text">Domingo 12/10/1997<br>Estadio Ferro</p>
+        <p class="fancy-hover__text">Sábado 21/11/1998<br>Estadio Obras Sanitarias</p>
       </div>
     </figure>
     <!-- BACK SIDE -->
     <figure class="card-flip__content card-flip__content--back">
-      <p>La Renga<br>Rata Blanca<br>Malón<br>Las Pelotas<br>Caballeros de la Quema<br>León Gieco</p>
+      <img class="fancy-hover__text" src="./img/logo_viejas_locas.jpg">
     </figure>
   </div>
 </figure>
@@ -101,15 +132,42 @@
       <img class="fancy-hover__image" src="./img/05.jpg">
       <div class="fancy-hover__fancy"></div>
       <div class="fancy-hover__element fancy-hover__element--title">
-        <p class="fancy-hover__text">Festival Madres de Plaza de Mayo</p>
+        <p class="fancy-hover__text">Patricio Rey y sus Redonditos de Ricota</p>
       </div>
       <div class="fancy-hover__element fancy-hover__element--subtitle">
-        <p class="fancy-hover__text">Domingo 12/10/1997<br>Estadio Ferro</p>
+        <p class="fancy-hover__text">Viernes 18/12/1998<br>Estadio Racing Club</p>
       </div>
     </figure>
     <!-- BACK SIDE -->
     <figure class="card-flip__content card-flip__content--back">
-      <p>La Renga<br>Rata Blanca<br>Malón<br>Las Pelotas<br>Caballeros de la Quema<br>León Gieco</p>
+      <div class="sidebar">
+        <ol>
+          <li>El Pibe de los Astilleros</li>
+          <li>Un ángel para tu soledad</li>
+          <li>¡Cruz Diablo!</li>
+          <li>Scaramanzia</li>
+          <li>Drogocop</li>
+          <li>Pogo</li>
+          <li>La pequeña novia del Carioca</li>
+          <li>Las increíbles andanzas del Capitán Buscapina en Cybersiberia</li>
+          <li>¡Vamos las bandas!</li>
+          <li>Nueva Roma</li>
+          <li>Todo un palo</li>
+          <li>Gualicho</li>
+          <li>Alien Duce</li>
+          <li>El árbol del gran bonete</li>
+          <li>¡Estás frito, Angelito!</li>
+          <li>Shopping Disco-Zen</li>
+          <li>Juguetes perdidos</li>
+          <li>Es to-to-todo amigos</li>
+          <li>Mi perro dinamita</li>
+          <li>Ñam fri frufi fali fru</li>
+          <li>La bestia pop</li>
+          <li>Queso Ruso</li>
+          <li>Ji ji ji</li>
+          <li>Un tal Briggite Bardot</li>
+        </ol>
+      </div>
     </figure>
   </div>
 </figure>
@@ -122,15 +180,42 @@
       <img class="fancy-hover__image" src="./img/06.jpg">
       <div class="fancy-hover__fancy"></div>
       <div class="fancy-hover__element fancy-hover__element--title">
-        <p class="fancy-hover__text">Festival Madres de Plaza de Mayo</p>
+        <p class="fancy-hover__text">Patricio Rey y sus Redonditos de Ricota</p>
       </div>
       <div class="fancy-hover__element fancy-hover__element--subtitle">
-        <p class="fancy-hover__text">Domingo 12/10/1997<br>Estadio Ferro</p>
+        <p class="fancy-hover__text">Sábado 19/12/1998<br>Estadio Racing Club</p>
       </div>
     </figure>
     <!-- BACK SIDE -->
     <figure class="card-flip__content card-flip__content--back">
-      <p>La Renga<br>Rata Blanca<br>Malón<br>Las Pelotas<br>Caballeros de la Quema<br>León Gieco</p>
+      <div class="sidebar">
+      <ol>
+        <li>El Pibe de los Astilleros</li>
+        <li>Un ángel para tu soledad</li>
+        <li>¡Cruz Diablo!</li>
+        <li>Scaramanzia</li>
+        <li>Drogocop</li>
+        <li>Pogo</li>
+        <li>La pequeña novia del Carioca</li>
+        <li>Las increíbles andanzas del Capitán Buscapina en Cybersiberia</li>
+        <li>¡Vamos las bandas!</li>
+        <li>Nueva Roma</li>
+        <li>Todo un palo</li>
+        <li>Gualicho</li>
+        <li>Alien Duce</li>
+        <li>El árbol del gran bonete</li>
+        <li>¡Estás frito, Angelito!</li>
+        <li>Shopping Disco-Zen</li>
+        <li>Juguetes perdidos</li>
+        <li>Es to-to-todo amigos</li>
+        <li>Mi perro dinamita</li>
+        <li>Ñam fri frufi fali fru</li>
+        <li>La bestia pop</li>
+        <li>Queso Ruso</li>
+        <li>Un tal Briggite Bardot</li>
+        <li>Ji ji ji</li>
+      </ol>
+    </div>
     </figure>
   </div>
 </figure>
@@ -143,15 +228,50 @@
       <img class="fancy-hover__image" src="./img/07.jpg">
       <div class="fancy-hover__fancy"></div>
       <div class="fancy-hover__element fancy-hover__element--title">
-        <p class="fancy-hover__text">Festival Madres de Plaza de Mayo</p>
+        <p class="fancy-hover__text">Viejas Locas</p>
       </div>
       <div class="fancy-hover__element fancy-hover__element--subtitle">
-        <p class="fancy-hover__text">Domingo 12/10/1997<br>Estadio Ferro</p>
+        <p class="fancy-hover__text">Sábado 05/06/1999<br>Estadio Obras Sanitarias</p>
       </div>
     </figure>
     <!-- BACK SIDE -->
     <figure class="card-flip__content card-flip__content--back">
-      <p>La Renga<br>Rata Blanca<br>Malón<br>Las Pelotas<br>Caballeros de la Quema<br>León Gieco</p>
+      <div class="sidebar">
+      <ol>
+        <li>Intoxicado</li>
+        <li>Sacátelo</li>
+        <li>La Simpática Demonia</li>
+        <li>Chico de la Oculta</li>
+        <li>Excusas</li>
+        <li>Homero</li>
+        <li>Niños</li>
+        <li>Dámelo</li>
+        <li>Tirado y Enrollado</li>
+        <li>¿Qué Vas a Hacer Tan Sola Hoy?</li>
+        <li>Caminando Con Las Piedras</li>
+        <li>Balada Para Otra Mujer</li>
+        <li>Aunque a Nadie ya le Importe</li>
+        <li>Todavía Estás Ahí</li>
+        <li>Hermanos de Sangre</li>
+        <li>Adrenalina</li>
+        <li>Yo No Fuí</li>
+        <li>Voy a Dejarte</li>
+        <li>638...</li>
+        <li>Todo Sigue Igual</li>
+        <li>Botella</li>
+        <li>Una Vez Más</li>
+        <li>Sé Que Lo Atraparé</li>
+        <li>Todo Terminó</li>
+        <li>Una Piba Como Vos</li>
+        <li>Legalicenla</li>
+        <li>Lo Artesanal</li>
+        <li>Descansar en Paz</li>
+        <li>Perra</li>
+        <li>El Árbol de la Vida</li>
+        <li>Me Gustas Mucho</li>
+        <li>Difícil de Entender</li>
+      </ol>
+      </div>
     </figure>
   </div>
 </figure>
@@ -164,16 +284,49 @@
       <img class="fancy-hover__image" src="./img/08.jpg">
       <div class="fancy-hover__fancy"></div>
       <div class="fancy-hover__element fancy-hover__element--title">
-        <p class="fancy-hover__text">Festival Madres de Plaza de Mayo</p>
+        <p class="fancy-hover__text">Viejas Locas</p>
       </div>
       <div class="fancy-hover__element fancy-hover__element--subtitle">
-        <p class="fancy-hover__text">Domingo 12/10/1997<br>Estadio Ferro</p>
+        <p class="fancy-hover__text">Viernes 26/11/1999<br>Autopista Center</p>
       </div>
     </figure>
     <!-- BACK SIDE -->
     <figure class="card-flip__content card-flip__content--back">
-      <p>La Renga<br>Rata Blanca<br>Malón<br>Las Pelotas<br>Caballeros de la Quema<br>León Gieco</p>
-    </figure>
+      <div class="sidebar">
+        <ol>
+          <li>Adrenalina</li>
+          <li>Hermanos de Sangre</li>
+          <li>Todavía Estás Ahí</li>
+          <li>Tirado y Enrollado</li>
+          <li>Damelo</li>
+          <li>Voy a Dejarte</li>
+          <li>Homero</li>
+          <li>638…</li>
+          <li>Chico de la Oculta</li>
+          <li>Una Vez Más</li>
+          <li>Sé que lo Atraparé</li>
+          <li>Todo Sigue Igual</li>
+          <li>Aunque a Nadie Ya Le Importe</li>
+          <li>Como Ganado</li>
+          <li>Una Piba Como Vos</li>
+          <li>Tirado en la Estación / Piedrabuena Blues</li>
+          <li>¿Que vas a Hacer tan sola Hoy?</li>
+          <li>Caminando Con Las Piedras</li>
+          <li>Botella</li>
+          <li>Legalicenla</li>
+          <li>Excusas</li>
+          <li>Lo Artesanal</li>
+          <li>Árbol de la Vida</li>
+          <li>Descansar en Paz</li>
+          <li>Difícil de Entender</li>
+          <li>Buey</li>
+          <li>Me Gustas Mucho</li>
+          <li>Perra</li>
+          <li>Intoxicado</li>
+        </ol>
+        <p><u>Banda Invitada:</u> Resistencia Suburbana</p>
+      </div>
+      </figure>
   </div>
 </figure>
 <!-- partial -->
@@ -185,15 +338,15 @@
       <img class="fancy-hover__image" src="./img/09.jpg">
       <div class="fancy-hover__fancy"></div>
       <div class="fancy-hover__element fancy-hover__element--title">
-        <p class="fancy-hover__text">Festival Madres de Plaza de Mayo</p>
+        <p class="fancy-hover__text">"Chaqueño Palavecino"</p>
       </div>
       <div class="fancy-hover__element fancy-hover__element--subtitle">
-        <p class="fancy-hover__text">Domingo 12/10/1997<br>Estadio Ferro</p>
+        <p class="fancy-hover__text">Domingo 05/12/1999<br>Teatro Astral</p>
       </div>
     </figure>
     <!-- BACK SIDE -->
     <figure class="card-flip__content card-flip__content--back">
-      <p>La Renga<br>Rata Blanca<br>Malón<br>Las Pelotas<br>Caballeros de la Quema<br>León Gieco</p>
+      <img class="fancy-hover__text" src="img/logo_palavecino.jpg" alt="chaqueño palavecino">
     </figure>
   </div>
 </figure>
@@ -206,15 +359,34 @@
       <img class="fancy-hover__image" src="./img/10.jpg">
       <div class="fancy-hover__fancy"></div>
       <div class="fancy-hover__element fancy-hover__element--title">
-        <p class="fancy-hover__text">Festival Madres de Plaza de Mayo</p>
+        <p class="fancy-hover__text">Shakira</p>
       </div>
       <div class="fancy-hover__element fancy-hover__element--subtitle">
-        <p class="fancy-hover__text">Domingo 12/10/1997<br>Estadio Ferro</p>
+        <p class="fancy-hover__text">Lunes 27/03/2000<br>Estadio Luna Park</p>
       </div>
     </figure>
     <!-- BACK SIDE -->
     <figure class="card-flip__content card-flip__content--back">
-      <p>La Renga<br>Rata Blanca<br>Malón<br>Las Pelotas<br>Caballeros de la Quema<br>León Gieco</p>
+      <div class="sidebar">
+        <ol>
+          <li>Intro</li>
+          <li>¿Dónde Estás Corazón?</li>
+          <li>Si te Vas</li>
+          <li>¿Dónde Están Los Ladrones?</li>
+          <li>Inevitable</li>
+          <li>Antología</li>
+          <li>Moscas en la Casa</li>
+          <li>Ciega, Sordomuda</li>
+          <li>Tú</li>
+          <li>Estoy Aquí</li>
+          <li>Alfonsina y el Mar</li>
+          <li>Pies Descalzos, Sueños Blancos</li>
+          <li>Octavo Día</li>
+          <li>Ojos Así</li>
+          <li>Sombra de ti</li>
+          <li>No Creo</li>
+        </ol>
+      </div>
     </figure>
   </div>
 </figure>
@@ -227,15 +399,46 @@
       <img class="fancy-hover__image" src="./img/11.jpg">
       <div class="fancy-hover__fancy"></div>
       <div class="fancy-hover__element fancy-hover__element--title">
-        <p class="fancy-hover__text">Festival Madres de Plaza de Mayo</p>
+        <p class="fancy-hover__text">Patricio Rey y sus Redonditos de Ricota</p>
       </div>
       <div class="fancy-hover__element fancy-hover__element--subtitle">
-        <p class="fancy-hover__text">Domingo 12/10/1997<br>Estadio Ferro</p>
+        <p class="fancy-hover__text">Domingo 16/04/2000<br>Estadio River Plate</p>
       </div>
     </figure>
     <!-- BACK SIDE -->
     <figure class="card-flip__content card-flip__content--back">
-      <p>La Renga<br>Rata Blanca<br>Malón<br>Las Pelotas<br>Caballeros de la Quema<br>León Gieco</p>
+      <div class="sidebar">
+        <div class="sidebar">
+          <ol>
+            <li>Un Ángel Para tu Soledad</li>
+            <li>Queso Ruso</li>
+            <li>Alien Duce</li>
+            <li>Pogo</li>
+            <li>Drogocop</li>
+            <li>Las Increíbles Andanzas del Capitán Buscapina en Cybersiberia</li>
+            <li>Motor Psico</li>
+            <li>Buenas Noticias</li>
+            <li>El Pibe De Los Astilleros</li>
+            <li>Ladrón De Mi Cerebro</li>
+            <li>Mi Perro Dinamita</li>
+            <li>Ñam fri fruli fali fru</li>
+            <li>Caña Seca y un Membrillo</li>
+            <li>La Hija Del Fletero</li>
+            <li>El Árbol Del Gran Bonete</li>
+            <li>Estás Frito, Angelito</li>
+            <li>Nuestro Amo Juega Al Esclavo</li>
+            <li>Juguetes Perdidos</li>
+            <li>Blues De La Artillería</li>
+            <li>Vamos Las Bandas</li>
+            <li>Esto es to-to-todo, Amigos!</li>
+            <li>Scaramanzia</li>
+            <li>Nueva Roma</li>
+            <li>Preso En Mi Ciudad</li>
+            <li>Ya Nadie Va A Escuchar Tu Remera</li>
+            <li>Jijiji</li>
+          </ol>        
+        </div>
+      </div>
     </figure>
   </div>
 </figure>
@@ -248,15 +451,15 @@
       <img class="fancy-hover__image" src="./img/12.jpg">
       <div class="fancy-hover__fancy"></div>
       <div class="fancy-hover__element fancy-hover__element--title">
-        <p class="fancy-hover__text">Festival Madres de Plaza de Mayo</p>
+        <p class="fancy-hover__text">Viejas Locas</p>
       </div>
       <div class="fancy-hover__element fancy-hover__element--subtitle">
-        <p class="fancy-hover__text">Domingo 12/10/1997<br>Estadio Ferro</p>
+        <p class="fancy-hover__text">Sábado 27/05/2000<br>Estadio Obras Sanitarias</p>
       </div>
     </figure>
     <!-- BACK SIDE -->
     <figure class="card-flip__content card-flip__content--back">
-      <p>La Renga<br>Rata Blanca<br>Malón<br>Las Pelotas<br>Caballeros de la Quema<br>León Gieco</p>
+      <img class="fancy-hover__text" src="./img/logo_viejas_locas.jpg">
     </figure>
   </div>
 </figure>
