--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Entradas</title>
+    <link rel="icon" type="image/x-icon" href="../entradas/img/favicon.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"
@@ -661,6 +662,36 @@
               </div>
             </div>
           </figure>
+        </div>
+      </figure>
+      <!-- partial -->
+      <!-- partial:index.partial.html -->
+      <figure class="card-flip fancy-hover">
+        <div class="card-flip__flipper">
+          <!-- FRONT SIDE -->
+          <figure class="card-flip__content card-flip__content--front">
+            <img class="fancy-hover__image" src="./img/15.jpg" />
+            <div class="fancy-hover__fancy"></div>
+            <div class="fancy-hover__element fancy-hover__element--title">
+              <p class="fancy-hover__text">Totus Toss</p>
+            </div>
+            <div class="fancy-hover__element fancy-hover__element--subtitle">
+              <p class="fancy-hover__text">Viernes 13/12/2000<br />El Roxy</p>
+            </div>
+          </figure>
+          <!-- BACK SIDE -->
+          <figure class="card-flip__content card-flip__content--back">
+            <div class="sidebar">
+              <div class="sidebar">
+                <p class="fancy-hover__text">
+                  <a href="../entradas/img/15.jpg" target="_blank"
+                    >Ver entrada</a
+                  >
+                </p>
+              </div>
+            </div>
+          </figure>
+          <!-- partial -->
         </div>
       </figure>
     </div>
