--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               de la Quema<br />León Gieco
             </p>
             <p class="fancy-hover__text">
-              <a href="../entradas/img/02.jpg" target="_blank">Ver entrada</a>
+              <a href="./img/02.jpg" target="_blank">Ver entrada</a>
             </p>
           </figure>
         </div>
@@ -124,7 +124,7 @@
                 <li>Hablando de la libertad</li>
               </ol>
               <p class="fancy-hover__text">
-                <a href="../entradas/img/03.jpg" target="_blank">Ver entrada</a>
+                <a href="./img/03.jpg" target="_blank">Ver entrada</a>
               </p>
             </div>
           </figure>
